# AdventOfCode

./: Notes.md
2018/: .gitignore
2018/Day01/: .gitignore  Day01.cabal  Day01.hs  MainPart1.hs  MainPart2.hs  Main_b.hs  Makefile  hindent-all  package.yaml
2018/Day01-Stack/: .gitignore
2018/Day01-Stack/part1/: Main.hs
2018/Day01/part2/: Main.hs
2018/Day01/src/: Lib.hs
2018/Day01/test/: Tests.hs
2018/Day01/tests/: Tests.hs
2018/Day02/: Day02.cabal  Day02.hs  MainPart1.hs  MainPart2.hs  Makefile
2018/Day02/tests/: Tests.hs
2018/Day03/: Claim.hs  Day03.cabal  Day03.hs  MainPart1.hs  MainPart2.hs  Makefile
2018/Day03/tests/: Tests.hs
2018/Day04/: Day04.cabal  Day04.hs  MainPart1.hs  Makefile  Record.hs
2018/Day04/tests/: Tests.hs
2018/Day05/: Day05.cabal  Day05.hs  MainPart1.hs  MainPart2.hs  Makefile
2018/Day05/tests/: Tests.hs
2018/Day06/: Day06.cabal  Day06.hs  MainPart1.hs  Makefile
2018/Day06/tests/: Tests.hs
2018/Day07/: Day07.cabal  Day07.hs  Graph.hs  GraphMain.hs  MainPart1.hs  Makefile  graph.txt
2018/Day07/tests/: Tests.hs
2018/hunit-example/: Makefile  README  hindent-all
2018/hunit-example/tests/: Tests.hs
2019/Day01/: package.yaml
2019/Day01/part1/: Main.hs
2019/Day01/part2/: Main.hs
2019/Day01/src/: Lib.hs
2019/Day01/test/: Tests.hs
2019/Day02/: package.yaml
2019/Day02/part1/: Main.hs
2019/Day02/part2/: Main.hs
2019/Day02/src/: Lib.hs
2019/Day02/test/: Tests.hs
2019/Day03/: package.yaml
2019/Day03/part1/: Main.hs
2019/Day03/part2/: Main.hs
2019/Day03/src/: Coordinate.hs  Lib.hs
2019/Day03/test/: Tests.hs
2019/Day04/: Day04.cabal
2019/Day04/part1/: Main.hs
2019/Day04/part2/: Main.hs
2019/Day04/src/: Lib.hs
2019/Day04/test/: Tests.hs
2019/Day05/: Day05.cabal
2019/Day05/part1/: Main.hs
2019/Day05/part2/: Main.hs
2019/Day05/src/: Lib.hs
2019/Day05/test/: Tests.hs
2019/Day06/part1/: Main.hs
2019/Day06/part2/: Main.hs
2019/Day06/src/: Lib.hs
2019/Day06/test/: Tests.hs
2019/Day07/: Day07.cabal  p.py  p2.py
2019/Day07/part1/: Main.hs
2019/Day07/part2/: Main.hs
2019/Day07/src/: Lib.hs
2019/Day07/test/: Tests.hs
2019/Day08/: Day08.cabal
2019/Day08/part1/: Main.hs
2019/Day08/part2/: Main.hs
2019/Day08/src/: Lib.hs
2019/Day08/test/: Tests.hs
2019/Day09/: Day09.cabal
2019/Day09/part1/: Main.hs
2019/Day09/part2/: Main.hs
2019/Day09/src/: Lib.hs
2019/Day09/test/: Tests.hs
2019/Day10/: Day10.cabal
2019/Day10/src/: Lib.hs
2019/Day10/test/: Tests.hs
2019/DayXX/: DayXX.cabal  package.yaml
2019/DayXX/test/: Tests.hs
