Name:               day03
Version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  Day03, Claim
  Build-Depends:    base >= 3 && < 5
                  , containers
                  , parsec

Test-Suite test-day03
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  Main-is:          Tests.hs
  Build-Depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
                  , day03
                  , containers

