Name:               day06
Version:            1.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  Day06
  Build-Depends:    base >= 3 && < 5
                  , containers
                  , split

Test-Suite test-day06
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  Main-is:          Tests.hs
  Build-Depends:    base >= 3 && < 5
                  , tasty
                  , tasty-hunit
                  , day06
                  , containers
